[gd_scene load_steps=9 format=3 uid="uid://djsn4cx2hq8q4"]

[ext_resource type="Script" uid="uid://duc5pofg8524s" path="res://UI/Buttons/RoomPassiveAbilityBtn/room_passive_ability_btn.gd" id="1_4sylx"]
[ext_resource type="PackedScene" uid="uid://cp63njwa3niv7" path="res://UI/Buttons/Checkbox/Checkbox.tscn" id="2_f8eie"]
[ext_resource type="FontFile" uid="uid://dlia1t71max12" path="res://Fonts/PixelOperator.ttf" id="2_jg673"]
[ext_resource type="PackedScene" uid="uid://c5ld7n1ycuql2" path="res://UI/Buttons/IconBtn/IconBtn.tscn" id="3_f8eie"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jg673"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_onoaw"]
bg_color = Color(0.162066, 0.162066, 0.162066, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_f8eie"]
font = ExtResource("2_jg673")
font_color = Color(0.827451, 0.827451, 0.827451, 1)
outline_size = 8
outline_color = Color(0.162066, 0.162066, 0.162066, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_axmus"]
bg_color = Color(1, 1, 1, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="RoomPassiveAbilityBtn" type="PanelContainer"]
offset_right = 194.0
offset_bottom = 29.0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_jg673")
script = ExtResource("1_4sylx")
panel_color = Color(0.275367, 0.56172, 0.999992, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="CostAndCooldown" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_onoaw")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/CostAndCooldown"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/CostAndCooldown/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="IconBtn" parent="MarginContainer/HBoxContainer/CostAndCooldown/MarginContainer/HBoxContainer" instance=ExtResource("3_f8eie")]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3
icon = 32
static_color = Color(0.827451, 0.827451, 0.827451, 1)
is_hoverable = false

[node name="CostLabel" type="Label" parent="MarginContainer/HBoxContainer/CostAndCooldown/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(15, 25)
layout_mode = 2
text = "99"
label_settings = SubResource("LabelSettings_f8eie")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_onoaw")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Name"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Name/MarginContainer"]
layout_mode = 2

[node name="CheckBox" parent="MarginContainer/HBoxContainer/Name/MarginContainer/HBoxContainer" instance=ExtResource("2_f8eie")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_axmus")
no_bg = true
is_hoverable = false

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/Name/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 3
label_settings = SubResource("LabelSettings_f8eie")
vertical_alignment = 1
